# lumen

./: .gitignore  README.md  pyproject.toml
lumen/: CaldavConnector.py  CalendarInteraction.py  MinifluxConnector.py  ai.py  cli.py  tui.py  utils.py
lumeny/: ai.py  ai_utils.py  calendar.py  calendar_commands.py  cli.py  utils.py
