[tool.poetry]
name = "lumen"
version = "0.1.0"
description = ""
authors = ["Tangdi <45258158+TangdizhiH@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
caldav = "^1.2.1"
miniflux = "^0.0.15"
click = "^8.1.3"
click-config-file = "^0.6.0"
textual = "^0.16.0"
qdrant-client = "^1.1.0"
openai = "^0.27.2"
docker = "^6.0.1"
nltk = "^3.8.1"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
